# hpc-sonarqube

./: .gitignore  CHANGELOG.md  README.md  hie.yaml  hpc-codecov.cabal  hpc-sonarqube.cabal
app/: hpc-sonarqube.hs
src/Trace/Hpc/Codecov/: Options.hs  Report.hs
src/Trace/Hpc/SonarQube/: Discover.hs  Exception.hs  Main.hs  Options.hs  Report.hs
test/Test/: Main.hs
