cabal-version:       2.0
name:                hpc-sonarqube
version:             0.3.0.0
synopsis:            Generate SonarQube report from hpc data
license:             BSD3
license-file:        LICENSE
author:              8c6794b6 (8c6794b6@gmail.com)
maintainer:          SCB TSTRATS team
copyright:           (c) 2022 8c6794b6
category:            Test, Data
build-type:          Simple

description:
  The hpc-sonarqube package contains an executable and library codes for
  generating <https://www.sonarqube.org SonarQube> XML coverage report from
  @.tix@ and @.mix@ files made with
  <https://hackage.haskell.org/package/hpc hpc>.

  This is almost identical to hpc-codecov utility available
  <https://github.com/8c6794b6/hpc-codecov#readme HERE>.

extra-source-files:
  README.md
  CHANGELOG.md
  --
  test/data/reciprocal/reciprocal.hs
  test/data/reciprocal/reciprocal.tix
  test/data/reciprocal/.hpc/Main.mix
  --
  test/data/project1/ChangeLog.md
  test/data/project1/LICENSE
  test/data/project1/README.md
  test/data/project1/Setup.hs
  test/data/project1/app/Main.hs
  test/data/project1/package.yaml
  test/data/project1/src/Lib.hs
  test/data/project1/test/Spec.hs
  test/data/project1/project1.cabal
  test/data/project1/stack.yaml

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.4
                     , GHC == 8.6.5
                     , GHC == 8.8.4
                     , GHC == 8.10.1
                     , GHC == 9.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Trace.Hpc.SonarQube.Exception
                       Trace.Hpc.SonarQube.Discover
                       Trace.Hpc.SonarQube.Main
                       Trace.Hpc.SonarQube.Report
                       Paths_hpc_sonarqube
  other-modules:       Trace.Hpc.SonarQube.Options
  autogen-modules:     Paths_hpc_sonarqube
  build-depends:       base        >= 4.10  && < 5
                     , array       >= 0.1   && < 0.6
                     , bytestring  >= 0.10  && < 0.12
                     , directory   >= 1.3.0 && < 1.4.0
                     , filepath    >= 1.4.1 && < 1.5
                     , hpc         >= 0.6   && < 0.7
                     , xml
                     , containers
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hpc-sonarqube
  hs-source-dirs:      app
  main-is:             hpc-sonarqube.hs
  build-depends:       base
                     , hpc-sonarqube
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts

test-suite test-main
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-main.hs
  other-modules:       Test.Main
  build-depends:       base
                     , directory
                     , filepath
                     , hpc-sonarqube
                       --
                     , process     >= 1.6   && < 1.7
                     , tasty       >= 1.0   && < 1.5
                     , tasty-hunit >= 0.8   && < 1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
